--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -144,7 +144,7 @@
     <main>
         <section>
             <h2>Terms and Conditions</h2>
-            <p>By participating in the Cricket Contest Game (hereinafter referred to as the "Contest"), you agree to abide by the following Terms and Conditions:</p>
+            <p>By participating in the b2win (hereinafter referred to as the "Contest"), you agree to abide by the following Terms and Conditions:</p>
         </section>
 
         <section>
