--- a/matchinfo.html
+++ b/matchinfo.html
@@ -500,7 +500,8 @@ showLoader();
     button.addEventListener("click", (event) => handleQuestionSubmit(event));
   });
 }
-function handleQuestionSubmit(event) {
+async function handleQuestionSubmit(event) {
+
     const button = event.target;
     const questionId = button.getAttribute("data-question-id");
 
@@ -522,6 +523,16 @@ function handleQuestionSubmit(event) {
     if (!bettingAmount) {
         alert(`Please select a betting amount for Question ${questionId} before submitting.`);
         return;
+    }
+    try {
+    // Check balance
+ const balance = await getBalance();
+    console.log("Fetched Balance:", balance);
+
+    // Ensure enough balance
+    if (balance<bettingAmount ) {
+      alert("Insufficient balance to place this contest.");
+      return;
     }
 
     const answer = selectedOption.nextElementSibling.textContent.trim(); // Get the text of the selected option
@@ -557,6 +568,9 @@ function handleQuestionSubmit(event) {
             console.error("Failed:", error.responseText || error);
             alert(error.responseText || error);
         });
+        } catch (error) {
+    console.error("Failed to handle question submit:", error);
+  }
 }
 
 
@@ -829,6 +843,35 @@ function getPlayers() {
             console.error("Failed:", error.responseText || error);
             alert(error.responseText || error);
         });
+}
+
+async function getBalance() {
+  const url = "https://test.api.itisiya.com:8443/b2winai/e-wallet/wallet/balance";
+
+  try {
+    showLoader();
+
+    const response = await apiCall({
+      url: url,
+      method: "POST",
+    });
+
+    hideLoader();
+
+    if (response.statuscode === 200) {
+      const { available_balance } = response.data;
+      return available_balance; // Correctly return the balance
+    } else {
+      console.error("Failed to fetch balance:", response.statuscode, response.message);
+      alert("Error fetching balance: " + response.message);
+      return 0; // Return 0 as fallback balance
+    }
+  } catch (error) {
+    hideLoader();
+    console.error("Error fetching balance:", error);
+    alert("Unexpected error occurred while fetching balance.");
+    return 0; // Return 0 in case of error
+  }
 }
 
 
