rejectiom message added

--- a/tournamentResult.html
+++ b/tournamentResult.html
@@ -291,10 +291,10 @@
     <h4><span class="text-white">Summary</span></h4>
     
   </div>
-  <div class="row p-3">
+  <div class="row">
    
-    <div class="col-md-12" style="padding:20px">
-     <div class="card-body">
+    <div class="col-md-12">
+     <div class="card-body" style="padding: 0.25rem;!important">
   <!-- Tabs for Open, Accepted, Rejected, Won, BadLuck, Settled, Cancelled -->
   <ul class="nav nav-tabs" id="statusTabs" role="tablist">
     <li class="nav-item">
@@ -615,7 +615,6 @@ function renderTabContent(tabName, items) {
       // Add contest_question details
       if (item.contest_question) {
         const cq = item.contest_question;
-
         // Add contest details only if team1 is not null/blank
         if (cq.team1 && cq.team1.trim()) {
           listItemHTML += `
@@ -631,6 +630,18 @@ function renderTabContent(tabName, items) {
       // Add Won Points if the tab is "Won"
       if (tabName === "won" && item.win_point !== undefined) {
         listItemHTML += `<strong>Win Points:</strong> ${item.win_point} <br>`;
+      }
+if (tabName === "rejected" && item.win_point !== undefined) {
+    if (item.contest_question) {
+        const cq = item.contest_question;
+        const rejection= JSON.parse(cq.rejection);
+        const rejection_message=rejection.rejection_reason;
+        console.log(rejection_message);
+        // Add contest details only if team1 is not null/blank
+
+        listItemHTML += `<strong>Rejected Reason:</strong> ${rejection_message} <br>`;
+        
+      }
       }
 
       listItem.innerHTML = listItemHTML;
