--- a/admin/wonSummary.html
+++ b/admin/wonSummary.html
@@ -258,7 +258,7 @@
                                           <th>Match</th>
                                           <th>Match Date</th>
                                           <th>Question</th>
-                                          <th>Total Points</th>
+                                          <th>Total Contest</th>
                                           <th>Total Winners</th>
                                           <th>Total Losers</th>
                                           <th>Total Contest Points</th>
