--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             Already have an account? <a href="#" id="login_btn" style="color: #ffaa00;">Login</a>
         </div>
     </div>
-       <button type="submit" id="register_button" onclick="showRegistrationAlert();" class="login-button" disabled>Register</button>
+       <button type="submit" id="register_button" onclick="register();" class="login-button" disabled>Register</button>
 
 </div>
 
