--- a/profile.html
+++ b/profile.html
@@ -467,8 +467,8 @@
 
      getBalance();
       setInterval(getBalance, 10000);
-      getAcceptedPoint();
-      setInterval(getAcceptedPoint, 10000);
+      //getAcceptedPoint();
+      //setInterval(getAcceptedPoint, 10000);
     // document.getElementById("enableWalletSection").style.display = "none";
     // document.getElementById("walletFeatures").style.display = "block";
   } else {
