--- a/matchinfo.html
+++ b/matchinfo.html
@@ -261,7 +261,7 @@
   <div class="container">
     <div class="card">
   <div class="card-header bg-info text-warning d-flex justify-content-between align-items-center">
-    <h4>Test Your Luck <span class="text-white">[Mactes]</span></h4>
+    <h4>Test Your Luck <span class="text-white">[Matches]</span></h4>
     <button class="btn btn-danger btn-sm" onclick="togglePlayerList()">Players</button>
   </div>
   <div class="row p-3">
